--- a/scripts/R28_new_clinical_data.Rmd
+++ b/scripts/R28_new_clinical_data.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "New clinical data - BSI CD4"
+title: "New clinical: IR with CD4"
 output: html_document
 date: "2025-07-09"
 ---
@@ -13,211 +13,54 @@ library(tidyverse)
 library(broom)
 ```
 
-Date ranges:
-
-Blood Cx: Days 0 to 100
-
-ALC: Day -365 to 365
-
-CD4: Day -365 to 365
-
-
-Caveats –
-
-Blood Cx: working on a more robust tool to pull out cleaned names for species isolates from the culture reports. Right now, done with simple Regex. Result2 column contains additional bugs if identified.
-
-CD4: I am still trying to hunt down all the different assays we use to describe CD4+ cells, this one is just using the most popular assay I could identify for absolute CD4 quantification.
-
-# Immune reconstitution
+# clean data from Oriana's data of CD4 count
 
 ```{r}
-# For the ALC and CD4 data, the uln of 3.2 means that a result above 3.2 would be considered higher than normal. However, in the context of BMT patients who are recovering from zero, the primary focus is on seeing the result_value increase towards the normal range. The ULN is just there for completeness.
-load('../data/angel_chrt_bsi_cd4_alc.RData') 
-
-ptb <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/156_combined_PTB.csv')
 link <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/152_pid_match.csv')
+ptb <- read_csv('../../MSS_pipeline-/scripts/food_tree/data/156_combined_PTB.csv')
 meta <- read_csv('../data/153_combined_META.csv')
+```
 
-d_alc <- alc %>% 
-  mutate(mrn = as.numeric(mrn), dt_performed = ymd(dt_performed)) %>% 
-  left_join(ptb %>% select(mrn, hct)) %>% 
-  mutate(alc_day = as.numeric(dt_performed - hct)) %>% 
+What Oriana's dataline pull has :
+- CD3-56+16+ Absolute: This counts your Natural Killer (NK) cells. These are cells that lack the T-cell marker (CD3-) but have the classic NK cell markers (CD56+ and CD16+). NK cells are part of your innate immune system, acting as rapid first-responders to kill infected or cancerous cells.
+- CD3-19+ B Cells Absolute: This is the count of your B Cells. They are identified by being negative for the T-cell marker (CD3-) but positive for the B-cell marker (CD19+). B cells are famous for producing antibodies.
+- CD3+4-8+ CD8+ T Cells Absolute: This is your count of Cytotoxic T Cells (also called CD8+ T cells). They are a type of T cell (CD3+) that has the CD8 marker but lacks the CD4 marker. Their job is to directly find and kill infected or cancerous cells. Think of them as the immune system's special forces.
+- CD3+4+8- CD4+ T Cells Absolute: This measures your Helper T Cells (also called CD4+ T cells). They are T cells (CD3+) that have the CD4 marker but lack CD8. These cells are the "generals" of the immune army; they coordinate the entire immune response.
+
+```{r}
+# below is all the counts from the pt that I have also included stool samples in this cohort 
+dat <- readxl::read_excel('/Volumes/vandenBrinkLab/Oriana/IR/data_pull/MED30338 DataLine Results.xlsx', sheet = 2) %>% 
+  mutate(mrn = as.numeric(MRN)) %>% 
   inner_join(link) %>% 
-  select(-mrn) %>% 
-  select(pid, alc_day, result_value, uln, lab)
+  filter(pid %in% meta$pid) %>% 
+  left_join(ptb %>% mutate(source_and_gvhdppx = str_glue('{source}+{gvhd_ppx}')) %>%  select(mrn, hct, source_and_gvhdppx, day_exposed)) %>% 
+  mutate(test_date = ymd(LR_PERFORMED_DTE),
+         test_day = as.numeric(test_date - hct),
+         source_and_gvhdppx = factor(source_and_gvhdppx ),
+        LR_RESULT_VALUE = as.numeric(LR_RESULT_VALUE) ) %>% 
+  select(mrn, pid,  hct, test_day, LCI_SUBTEST_NAME, LR_RESULT_VALUE, source_and_gvhdppx, day_exposed) %>% 
+  janitor::clean_names()
 
-# deidentify the other two
-d_cd4 <- cd4 %>% 
-  mutate(mrn = as.numeric(mrn), dt_performed = ymd(dt_performed)) %>% 
-  left_join(ptb %>% select(mrn, hct)) %>% 
-  mutate(cd4_day = as.numeric(dt_performed - hct)) %>% 
-  inner_join(link) %>% 
-  select(-mrn) %>% 
-  select(pid, cd4_day, result_value, uln, lab) %>% 
-  mutate(lab = 'cd4')
-```
-
-
-
-```{r}
-# A standard and easily defensible choice would be to match each stool sample with the closest lab draw within a +/- 2 day window.
-
-# For a stool sample collected on sdrt = 5, you would look for any ALC/CD4 measurements taken on days 3, 4, 5, 6, or 7.
-# 
-# If there are multiple lab draws in that window, you would typically use the one that is closest in time to the stool sample.
-
-# --- Combine ALC and CD4 data into a single long-format lab table ---
-# This makes the matching process much more efficient.
-all_labs_df <- bind_rows(
-  rename(d_alc, day = alc_day),
-  rename(d_cd4, day = cd4_day)
-)
-```
-
-
-```{r}
-# ---  Create the Density Plot ---
-# This plot shows the distribution of collection days for each lab type.
-
-ggplot(all_labs_df, aes(x = day, fill = lab)) +
-  # geom_density creates a smooth curve representing the distribution.
-  # The 'alpha' argument adds transparency so you can see overlapping areas.
-  geom_density(alpha = 0.6) +
-  
-  # Add a vertical line at Day 0 (transplant day) for reference
-  geom_vline(xintercept = 0, linetype = "dashed", color = "black") +
-  geom_vline(xintercept = -9, linetype = "dashed", color = "red") +
-  geom_vline(xintercept = 50, linetype = "dashed", color = "red") +
-  
-  # Manually define colors for clarity
-  scale_fill_manual(values = c("alc" = "#118AB2", "cd4" = "#FF6B6B")) +
-  
-  # Add informative labels
-  labs(
-    title = "Distribution of ALC and CD4 Collection Days",
-    subtitle = "Density plot shows when lab measurements were most frequently taken",
-    x = "Days Relative to Transplant",
-    y = "Density",
-    fill = "Lab Type"
-  ) +
-  
-  # Use a clean theme
-  theme_bw(base_size = 14) +
-  theme(legend.position = "bottom")
-
-```
-
-```{r}
-# This plot shows the immune reconstitution trajectory for each patient,
-# separated by lab type (ALC vs. CD4).
-pseudocount <- 1
-
-ggplot(all_labs_df, aes(x = day, y = result_value + pseudocount, color = lab, fill = lab)) +
-  # Use geom_smooth to show the average trend line and its 95% confidence interval.
-  # This replaces the individual patient lines for a much cleaner look.
-  geom_smooth(method = "loess", alpha = 0.2) +
-  
-  # Use facet_wrap to create separate plots for 'alc' and 'cd4'.
-  # 'scales = "free_y"' is crucial because ALC and CD4 are on different scales.
-  facet_wrap(~ lab, scales = "free_y", nrow = 2) +
-  
-  # Use a log10 scale on the y-axis to better visualize the wide range of counts
-  scale_y_log10() +
-  annotation_logticks(sides = "l") + # Adds minor tick marks for the log scale
-  
-  # Manually define colors for clarity
-  scale_color_manual(values = c("alc" = "#118AB2", "cd4" = "#FF6B6B")) +
-  scale_fill_manual(values = c("alc" = "#118AB2", "cd4" = "#FF6B6B")) +
-  
-  # Add a vertical line at Day 0 (transplant day) for reference
-  geom_vline(xintercept = 0, linetype = "dashed", color = "black") +
-    geom_vline(xintercept = -9, linetype = "dashed", color = "red") +
-  geom_vline(xintercept = 50, linetype = "dashed", color = "red") +
-  
-  # Add informative labels
-  labs(
-    title = "Average Immune Reconstitution Trajectories for ALC and CD4",
-    subtitle = "Line shows the average trend (LOESS smooth) across all patients",
-    x = "Days Relative to Transplant",
-    y = "Cell Count (log10 scale)",
-    color = "Lab Type",
-    fill = "Lab Type"
-  ) +
-  
-  # Use a clean theme
-  theme_bw(base_size = 14) +
-  theme(legend.position = "bottom")
-
-```
-
-```{r}
-# --- Match Stool Samples to Closest Lab Draw ---
-# stool_df_with_window <- meta %>%
-#   select(sampleid, sdrt, simpson_reciprocal, pid,intensity, empirical ) %>% 
-#   mutate(
-#     # The 2-day window starts 2 days before the stool sample...
-#     window_start = sdrt - 2,
-#     # ...and ends 2 days after the stool sample.
-#     window_end = sdrt + 2
-#   )
-# 
-# 
-# # This single command performs the entire matching process for all lab types.
-# matched_data <- stool_df_with_window %>%
-#   # Perform a non-equi join. This finds all lab draws for each patient
-#   # that fall within the +/- 2 day window of a stool sample.
-#   left_join(
-#     all_labs_df,
-#     by = join_by(
-#       pid,
-#       window_start <= day,
-#       window_end >= day
-#     )
-#   ) %>%
-#   # If a stool sample had multiple lab draws in its window, this section
-#   # will select only the one closest in time *for each lab type*.
-#   mutate(
-#     # Calculate the absolute time difference in days
-#     time_diff = abs(sdrt - day)
-#   ) %>%
-#   # Group by the original stool sample information AND the lab type
-#   group_by(sampleid, pid, sdrt, simpson_reciprocal, lab) %>%
-#   # For each group, keep only the row with the minimum time difference
-#   slice_min(order_by = time_diff, n = 1, with_ties = FALSE) %>%
-#   # Ungroup to finish the operation
-#   ungroup() %>%
-#   # Now, pivot the data to a "wide" format, so ALC and CD4 have their own columns
-#   select(-time_diff) %>% # Remove intermediate columns
-#   pivot_wider(
-#     names_from = lab,
-#     values_from = result_value
-#   )
-# 
-# 
-# # Print the final merged table
-# print(matched_data)
-
-
+dat
 ```
 
 # CD4
 
-peri engraftment diversity and the day 100/day 180 CD4
+peri-engraftment diversity and the day 100/day 180 CD4 using +/- 30 days as the window  
 
 ```{r}
-#Day 100: Look for a measurement between Day +85 and Day +115.
-
+#Day 100: Look for a measurement between Day +70 and Day +130.
 #Day 180: Look for a measurement between Day +150 and Day +210." 
 #and For any patient who has multiple CD4 measurements within your chosen window, you should select the one that is closest in time to the landmark day (i.e., closest to Day 100 or Day 180).
-cd4_day100 <- all_labs_df %>%
+cd4_day100 <- dat %>%
   # Keep only the CD4 lab results
-  filter(lab == "cd4") %>%
-  # Filter for rows within the Day 100 window (+85 to +115)
-  filter(day >= 85 & day <= 115) %>%
+  filter(lci_subtest_name == 'CD3+4+8- CD4+ T Cells Absolute') %>%
+  # Filter for rows within the Day 100 window 
+  filter(test_day >= 70 & test_day <= 130) %>%
   # For each patient, calculate the time difference to the landmark day
-  mutate(time_diff = abs(day - 100)) %>%
+  mutate(time_diff = abs(test_day - 100)) %>%
   # Group by patient ID to select the best measurement for each one
-  group_by(pid) %>%
+  group_by(pid, source_and_gvhdppx) %>%
   # Keep only the row with the minimum time difference
   # with_ties = FALSE ensures we only get one row if there's a tie
   slice_min(order_by = time_diff, n = 1, with_ties = FALSE) %>%
@@ -226,32 +69,32 @@ cd4_day100 <- all_labs_df %>%
   # Add a column to identify which landmark this data belongs to
   mutate(landmark = "Day_100") %>%
   # Rename columns for clarity
-  rename(cd4_value = result_value, cd4_day = day) %>%
-  select(pid, landmark, cd4_day, cd4_value, time_diff)
-```
+  rename(cd4_value = lr_result_value, cd4_day = test_day) %>%
+  select(pid, landmark, cd4_day, cd4_value, time_diff, source_and_gvhdppx, day_exposed) %>% 
+  filter(!is.na(cd4_value))
 
-
-```{r}
 # --- Step 3: Extract CD4 Count for Day 180 Landmark ---
 
-cd4_day180 <- all_labs_df %>%
+cd4_day180 <- dat %>%
   # Keep only the CD4 lab results
-  filter(lab == "cd4") %>%
-  # Filter for rows within the Day 180 window (+150 to +210)
-  filter(day >= 150 & day <= 210) %>%
+  filter(lci_subtest_name == 'CD3+4+8- CD4+ T Cells Absolute') %>%
+  # Filter for rows within the Day 180 window 
+  filter(test_day >= 150 & test_day <= 210) %>%
   # For each patient, calculate the time difference to the landmark day
-  mutate(time_diff = abs(day - 180)) %>%
-  # Group by patient ID
-  group_by(pid) %>%
+  mutate(time_diff = abs(test_day - 180)) %>%
+  # Group by patient ID to select the best measurement for each one
+  group_by(pid, source_and_gvhdppx) %>%
   # Keep only the row with the minimum time difference
+  # with_ties = FALSE ensures we only get one row if there's a tie
   slice_min(order_by = time_diff, n = 1, with_ties = FALSE) %>%
   # Ungroup to finish the operation
   ungroup() %>%
   # Add a column to identify which landmark this data belongs to
   mutate(landmark = "Day_180") %>%
   # Rename columns for clarity
-  rename(cd4_value = result_value, cd4_day = day) %>%
-  select(pid, landmark, cd4_day, cd4_value, time_diff)
+  rename(cd4_value = lr_result_value, cd4_day = test_day) %>%
+  select(pid, landmark, cd4_day, cd4_value, time_diff, source_and_gvhdppx, day_exposed)%>% 
+  filter(!is.na(cd4_value))
 
 
 # --- Step 4: Combine and View the Results ---
@@ -267,20 +110,15 @@ print(final_landmark_cd4)
 
 ```{r}
 stool_df_with_window <- meta %>%
-  select(sampleid, sdrt, simpson_reciprocal, pid,intensity, empirical ) %>%
-  mutate(
-    # The 2-day window starts 2 days before the stool sample...
-    window_start = sdrt - 2,
-    # ...and ends 2 days after the stool sample.
-    window_end = sdrt + 2
-  )
+  select(sampleid, sdrt, simpson_reciprocal, pid,intensity, empirical ) %>% 
+  mutate(intensity = factor(intensity))
 
 peri_engraftment_diversity <- stool_df_with_window %>%
   # Filter for rows within the peri-engraftment window
   filter(sdrt >= 7 & sdrt <= 21) %>%
   
   # Group by patient ID to calculate the average for each one
-  group_by(pid) %>%
+  group_by(pid, intensity) %>%
   
   # Calculate the mean of the diversity metric for all samples in the window
   # na.rm = TRUE will handle any missing diversity values gracefully
@@ -299,72 +137,61 @@ d100_df <- peri_engraftment_diversity %>%
 d180_df <- peri_engraftment_diversity %>% 
   inner_join(cd4_day180)
 ```
+
+## raw data viz
+
 ```{r}
-correlation_model <- lm(log1p(cd4_value) ~ peri_engraftment_diversity, data = d100_df)
+# Combine the two data frames into one for easier plotting.
+# The 'landmark' column will be used to distinguish the time points.
+combined_df <- bind_rows(d100_df, d180_df) %>%
+  # Make 'landmark' a factor with specified levels to ensure Day 100 is on the left.
+  mutate(landmark = factor(landmark, levels = c("Day_100", "Day_180")))
+
+
+# --- Step 3: Create the Faceted Plot ---
+ggplot(combined_df, aes(x = peri_engraftment_diversity, y = log1p(cd4_value))) +
+  # Add the points for the scatter plot.
+  geom_point(alpha = 0.8, color = "black") +
+  
+  # Add the linear regression line to each facet. The 'se = FALSE' hides the confidence interval ribbon.
+  geom_smooth(method = "lm", se = T, color = "blue", formula = y ~ x) +
+  
+  # This is where the magic happens for faceting.
+  # It creates a grid of plots, separated by 'landmark' and 'source_and_gvhdppx'.
+  facet_wrap(~ landmark + source_and_gvhdppx, ncol = 4) + 
+  
+  # Add clean, descriptive labels for the axes and title.
+  labs(
+    x = "Peri-engraftment Alpha Diversity",
+    y = "log(Absolute CD4 Count)"
+  ) +
+  
+  # Use a minimal, clean theme suitable for publication.
+  theme_minimal() +
+  theme(
+    strip.text = element_text(size = 8, face = "bold"), # Make facet labels easier to read
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5)
+  )
+```
+
+## modeling 
+
+```{r}
+correlation_model <- lm(log1p(cd4_value) ~   source_and_gvhdppx  + peri_engraftment_diversity  , data = d100_df)
+
+# Get a summary of the model to extract statistics
+model_summary <- summary(correlation_model)
+model_summary
+```
+
+
+```{r}
+correlation_model <- lm(log1p(cd4_value) ~ peri_engraftment_diversity + source_and_gvhdppx , data = d180_df)
 
 # Get a summary of the model to extract statistics
 model_summary <- summary(correlation_model)
 
-# Extract the R-squared and p-value for annotating the plot
-r_squared <- round(model_summary$r.squared, 3)
-p_value <- format(glance(model_summary)$p.value, digits = 2, scientific = TRUE)
 ```
 
-
-```{r}
-# --- Step 4: Create the Visualization ---
-# A scatter plot is the best way to visualize the correlation.
-
-ggplot(d100_df, aes(x = peri_engraftment_diversity, y = cd4_value)) +
-  # Add the points for each patient
-  geom_point(size = 3, color = "#118AB2", alpha = 0.8) +
-  # Add the regression line to show the trend
-  geom_smooth(method = "lm", se = TRUE, color = "#073B4C") +
-  
-  # Use a log scale for the y-axis for better visualization of CD4 counts
-  # scale_y_log10() +
-  # annotation_logticks(sides = "l") +
-  
-  # Add informative labels and a title that includes the correlation results
-  labs(
-    title = "Peri-Engraftment Diversity vs. Day 100 CD4 Count",
-    subtitle = paste0("Estimate = ", 0.02758, " (p = ", p_value, ")"),
-    x = "Median Peri-Engraftment Diversity (Simpson Reciprocal)",
-    y = "CD4 Count at Day 100"
-  ) +
-  # Use a clean theme
-  theme_bw(base_size = 14)
-
-```
-```{r}
-correlation_model <- lm(log1p(cd4_value) ~ peri_engraftment_diversity, data = d180_df)
-
-# Get a summary of the model to extract statistics
-model_summary <- summary(correlation_model)
-
-# Extract the R-squared and p-value for annotating the plot
-# Estimate <- round(model_summary$, 3)
-p_value <- format(glance(model_summary)$p.value, digits = 2, scientific = TRUE)
-
-ggplot(d180_df, aes(x = peri_engraftment_diversity, y = cd4_value)) +
-  # Add the points for each patient
-  geom_point(size = 3, color = "#118AB2", alpha = 0.8) +
-  # Add the regression line to show the trend
-  geom_smooth(method = "lm", se = TRUE, color = "#073B4C") +
-  
-  # Use a log scale for the y-axis for better visualization of CD4 counts
-  # scale_y_log10() +
-  # annotation_logticks(sides = "l") +
-  
-  # Add informative labels and a title that includes the correlation results
-  labs(
-    title = "Peri-Engraftment Diversity vs. Day 180 CD4 Count",
-    subtitle = paste0("Estimate = ", 0.02878, " (p = ", p_value, ")"),
-    x = "Median Peri-Engraftment Diversity (Simpson Reciprocal)",
-    y = "CD4 Count at Day 180"
-  ) +
-  # Use a clean theme
-  theme_bw(base_size = 14)
-
-```
 
